<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath />
    </parent>

    <groupId>com.majortom.algorithms</groupId>
    <artifactId>algorithms-parent</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>structures</module>
        <module>algorithms</module>
        <module>practice</module>
        <module>leetcode</module>
        <module>client</module>
        <module>server</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>21</javafx.version>
        <atlantafx.version>2.1.0</atlantafx.version>
        <algs4.version>1.0.4</algs4.version>
        <jackson.version>2.17.2</jackson.version>
        <gesturefx.version>0.8.0</gesturefx.version>
        <elk.version>0.12.0</elk.version>
        <xtext.version>2.36.0</xtext.version>
    </properties>

</project>